--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <li><a href="#about" data-after="About">About</a></li>
             <li><a href="#contact" data-after="Contact">Contact</a></li>
-            <li><a style="border: solid green; background-color: green;" href="#donate">Donate</a></li>
+            <li><a style="border: solid green; background-color: green;" href="https://rzp.io/l/U7J1pCj3lW">Donate</a></li>
           </ul>
         </div>
       </div>
